--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <script src="node_modules/chart.js/src/chart.js"></script>
+  <script src="node_modules/devextreme-aspnet-data/js/dx.aspnet.data.js"></script>
   <meta charset="utf-8">
   <title>TaskManagerApp</title>
   <base href="/">
