--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="node_modules/ng-drag-drop/style.css">  
   <meta charset="utf-8">
-  <title>TaskManagerApp</title>
+  <title>Flow</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
