--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <script src="node_modules/chart.js/src/chart.js"></script>
-  <link rel="stylesheet" href="node_modules/ng-drag-drop/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">    
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <meta charset="utf-8">
   <title>Flow</title>
   <base href="/">
